namespace DesignPattern.观察者模式2
{
    public interface IObserver
    {
        void Update();
    }
}